[package]
name = "block-f"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "block-f"
path = "src/main.rs"

[dependencies]
toml = "0.5"
serde = { version = "1.0.150", features = ["derive"] }
clap = { version = "3.2", features = ["derive"] }
notify = "5.0"
glob = "0.3"
colored = "2.0"
ctrlc = "3.4"
libc = "0.2"
